New Profile Card (Imam Hilmi) and pic 2 for image

--- a/index.html
+++ b/index.html
@@ -71,5 +71,67 @@
         </div>
       </div>
     </div>
+
+    <!-- Start Profile Card Imam Hilmi -->
+
+    <div class="wrapper">
+      <div class="card">
+        <div class="card__left">
+          <div class="card__left-img-box">
+            <img src="./img/pic2.png" alt="Pics1" class="card__left-img" />
+          </div>
+        </div>
+        <div class="card__right">
+          <div class="card__right-id-box">
+            <h1 class="card__right-id">
+              <span class="card__right-id-name">Imam Hilmi</span>
+              <span class="card__right-id-batch">Prodemy #7</span>
+            </h1>
+          </div>
+          <div class="card__right-detail-box">
+            <div class="card__right-detail">
+              <div class="card__right-detail-group">
+                <p class="card__right-detail-label">Email</p>
+                <p class="card__right-detail-data">imam.hilmi253@gmail.com</p>
+              </div>
+              <div class="card__right-detail-group">
+                <p class="card__right-detail-label">Mobile</p>
+                <p class="card__right-detail-data">085157455371</p>
+              </div>
+            </div>
+            <div class="card__right-detail">
+              <div class="card__right-detail-group">
+                <p class="card__right-detail-label">Pendidikan</p>
+                <p class="card__right-detail-data">T. Informatika</p>
+              </div>
+              <div class="card__right-detail-group">
+                <p class="card__right-detail-label">Keahlian</p>
+                <p class="card__right-detail-data">HTML, CSS, Wordpress</p>
+              </div>
+            </div>
+          </div>
+          <div class="card__right-social">
+            <div class="card__right-social-box">
+              <a href="https://twitter.com/ImamHilmi1" target="_blank">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </div>
+            <div class="card__right-social-box">
+              <a href="https://github.com/ImamHilmi/" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
+            </div>
+            <div class="card__right-social-box">
+              <a href="https://instagram.com/imam_hilmi222" target="_blank">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- End Profile Card Imam Hilmi-->
+
   </body>
 </html>
