--- a/index.html
+++ b/index.html
@@ -133,5 +133,68 @@
 
     <!-- End Profile Card Imam Hilmi-->
 
+
+    <!-- Start Profile Card Icha -->
+
+    <div class="wrapper">
+      <div class="card">
+        <div class="card__left">
+          <div class="card__left-img-box">
+            <img src="./img/icha.png" alt="Pics1" class="card__left-img" />
+          </div>
+        </div>
+        <div class="card__right">
+          <div class="card__right-id-box">
+            <h1 class="card__right-id">
+              <span class="card__right-id-name">Hairunisa</span>
+              <span class="card__right-id-batch">Prodemy #7</span>
+            </h1>
+          </div>
+          <div class="card__right-detail-box">
+            <div class="card__right-detail">
+              <div class="card__right-detail-group">
+                <p class="card__right-detail-label">Email</p>
+                <p class="card__right-detail-data">hairunisa2909@gmail.com</p>
+              </div>
+              <div class="card__right-detail-group">
+                <p class="card__right-detail-label">Mobile</p>
+                <p class="card__right-detail-data">082283977951</p>
+              </div>
+            </div>
+            <div class="card__right-detail">
+              <div class="card__right-detail-group">
+                <p class="card__right-detail-label">Pendidikan</p>
+                <p class="card__right-detail-data">Fisika</p>
+              </div>
+              <div class="card__right-detail-group">
+                <p class="card__right-detail-label">Keahlian</p>
+                <p class="card__right-detail-data">HTML, CSS, Python</p>
+              </div>
+            </div>
+          </div>
+          <div class="card__right-social">
+            <div class="card__right-social-box">
+              <a href="https://twitter.com/hairunisa2909" target="_blank">
+                <i class="fab fa-twitter"></i>
+              </a>
+            </div>
+            <div class="card__right-social-box">
+              <a href="https://github.com/hairunisa29/" target="_blank">
+                <i class="fab fa-github"></i>
+              </a>
+            </div>
+            <div class="card__right-social-box">
+              <a href="https://instagram.com/hairunisaicha" target="_blank">
+                <i class="fab fa-instagram"></i>
+              </a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- End Profile Card Icha-->
+
+
   </body>
 </html>
